--- a/src/pages/Home_page/components/header/style.module.css
+++ b/src/pages/Home_page/components/header/style.module.css
@@ -24,3 +24,26 @@
   font-size: 1.5rem;
   text-align: center;
 }
+@media(max-width: 650px) and (min-width: 600px) {
+  .header_title {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  .header_title {
+    font-size: 1.5rem !important;
+  }
+  .header_job {
+    font-size: 1rem !important;
+  }
+}
+@media (max-width: 992px) {
+  .header_job {
+    text-align: left;
+  }
+}
+@media (min-width: 992px) {
+  .header_title {
+    font-size: 3rem !important;
+  }
+}
