--- a/src/pages/contacts/component/style.module.css
+++ b/src/pages/contacts/component/style.module.css
@@ -37,6 +37,7 @@
     #5ffbf1
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .contact-form_control {
@@ -51,7 +52,7 @@
 .contact-form-control_message {
   height: 6rem;
 }
-.cotact-form_submit {
+.contact-form_submit {
   background-image: linear-gradient(
     to right top,
     #d16ba5,
@@ -78,7 +79,7 @@
   margin-bottom: 2rem;
 }
 .pesonal_contact {
-  display: block;
+  /* display: block; */
   font-size: 1.3rem;
   color: #223364;
 }
@@ -88,30 +89,12 @@
 .pesonal-contact_icon {
   margin-right: 1rem;
 }
-footer {
-  height: 70px;
-}
-hr {
-  width: 80%;
-  height: 0.1rem;
-  background-image: linear-gradient(
-    to right top,
-    #d16ba5,
-    #c777b9,
-    #ba83ca,
-    #aa8fd8,
-    #9a9ae1,
-    #8aa7ec,
-    #79b3f4,
-    #69bff8,
-    #52cffe,
-    #41dfff,
-    #46eefa,
-    #5ffbf1
-  );}
-.copyright {
-  margin-bottom: 0;
-  text-align: center;
-  color: #223364;
-  font-size: 1.3rem;
+
+@media (max-width: 600px) {
+  .contact-form_submit {
+    font-size: 0.9rem;
+  }
+  .pesonal_contact{
+    font-size: 1rem;
+  }
 }
