--- a/src/Shared-components/navbar/style.module.css
+++ b/src/Shared-components/navbar/style.module.css
@@ -2,19 +2,26 @@
   color: inherit !important;
   font-size: 2rem;
 }
+.logo__link {
+  color: inherit
+}
 .nav {
   color: #fff;
 }
 .nav_bg {
   color: #223364;
 }
+.nav_bg .toggler {
+  color: #223364
+}
+
 .navbar-scrolled {
   background-color: rgba(255, 255, 255, 0.9) !important;
   color: #223364;
 }
 .toggler {
   color: #fff;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 .navbar-scrolled .toggler {
   color: #223364;
@@ -25,8 +32,12 @@
 }
 
 @media (max-width: 600px) {
+  .nav {
+    border-bottom: 1px solid #ddd;
+  }
   .logo {
     margin-left: 0.5rem;
+    margin-bottom: 0;
   }
 }
 
