--- a/src/Shared-components/socialMedia/style.module.css
+++ b/src/Shared-components/socialMedia/style.module.css
@@ -1,5 +1,5 @@
 .socialMedia {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   font-size: 2rem;
 }
 .icon {
@@ -39,7 +39,8 @@
     font-size: 1.5rem;
   }
   .socialMedia li {
-    width: 2rem;
+    width: 1.6rem;
+    font-size: 1rem;
   }
 }
 @media (min-width: 992px) {
