--- a/src/pages/Home_page/components/projects/style.module.css
+++ b/src/pages/Home_page/components/projects/style.module.css
@@ -1,6 +1,11 @@
 .projects {
   padding: 5rem 0;
 }
+@media (max-width: 600px) {
+  .projects {
+    padding: 1rem 0;
+  }
+}
 .projects_heading {
   text-align: center;
   padding-bottom: 4rem;
