--- a/src/pages/contacts/component/style.module.css
+++ b/src/pages/contacts/component/style.module.css
@@ -92,9 +92,16 @@
 @media (max-width: 600px) {
   .contact-form_submit {
     font-size: 0.9rem;
+    width: 75%;
+    margin: 1rem auto;
+    display: block;
   }
   .pesonal_contact{
     font-size: 1rem;
+  }
+
+  .contact-form_control {
+    width: 100%;
   }
 
   .pesonal_contact li {
