--- a/src/Shared-components/navbar/style.module.css
+++ b/src/Shared-components/navbar/style.module.css
@@ -1,8 +1,9 @@
 .logo {
   color: inherit !important;
-  font-size: 2rem;
+  font-size: 3rem;
+  font-family: 'Damion', cursive;
 }
-.logo:hover {
+.logo :hover {
   text-decoration: none;
   color: inherit !important;
 }
