--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  font-family: "Open Sans Condensed", sans-serif;
-  font-weight: 800px;
+  font-family: "Open Sans Condensed", sans-serif!important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
