--- a/src/pages/Home_page/components/header/style.module.css
+++ b/src/pages/Home_page/components/header/style.module.css
@@ -21,7 +21,7 @@
   text-align: center;
 }
 .header_job {
-  font-size: 1.5rem;
+  font-size: 1.9rem !important;
   text-align: center;
 }
 @media (min-width: 992px) {
