--- a/src/pages/Home_page/components/about/style.module.css
+++ b/src/pages/Home_page/components/about/style.module.css
@@ -44,6 +44,7 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-weight: bold;
 }
 .about_photo {
   width: 100%;
