--- a/src/pages/Home_page/components/about/style.module.css
+++ b/src/pages/Home_page/components/about/style.module.css
@@ -83,7 +83,7 @@
   border-radius: 1rem;
   text-transform: uppercase;
   font-size: 1.5rem;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 .about_cv:hover {
   text-decoration: none;
