--- a/src/pages/contacts/component/style.module.css
+++ b/src/pages/contacts/component/style.module.css
@@ -80,7 +80,7 @@
   border-radius: 1rem;
   text-transform: uppercase;
   font-size: 1.5rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   border: none;
   margin-bottom: 2rem;
 }
