--- a/src/pages/Home_page/components/header/style.module.css
+++ b/src/pages/Home_page/components/header/style.module.css
@@ -3,7 +3,7 @@
   position: relative;
 }
 .header_background {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   position: relative;
   z-index: 0;
